# blockhash-oracle

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  block_cache.pkl  blocks.pklcache  chains.json  index.html  log.txt  prompt.txt  pyproject.toml  tmp.json
contracts/: BlockHeadersRLPDecoder.vy  BlockOracle.vy  HeaderVerifier.vy  LZContract.vy  MainnetBlockView.vy  OPL1BlockStorage.vy  OPL1TestBlockStorage.vy  OwnerProxy.vy
contracts/interfaces/: IL1Block.vyi
contracts/messengers/: ChainlinkBlockRelay.vy  LZBlockRelay.vy  LayerZeroV2.vy  LzBlockRelay.vy  LzMessenger.vy  aLZBlockRelay.vy
contracts/modules/: BlockHeaderRLPDecoder.vy  LayerZeroV2.vy
contracts/modules/chainlink/: CCIP.vy  CREReceiver.vy  IReceiver.vyi
contracts/modules/oapp_vyper/: OApp.vy  OptionsBuilder.vy  ReadCmdCodecV1.vy  VyperConstants.vy
cre-workflow/: .gitignore  README.md  project.yaml
cre-workflow/contracts/: package.json
cre-workflow/contracts/evm/src/abi/: IReceiver.abi  MainnetBlockView.abi
cre-workflow/contracts/scripts/: generate-bindings.ts
cre-workflow/workflow/: config.production.json  config.testnets.json  package.json  workflow.test.ts  workflow.ts  workflow.yaml
cre-workflow/workflow/types/: types.ts
docs/: index-wallet.html  index.html
scripts/: ABIs.py  LZDeployments.py  deploy_and_configure.ipynb  deploy_and_configure_jupyter.ipynb  deploy_and_configure_mainnets.ipynb  deploy_and_configure_testnets.ipynb  deploy_test_op.ipynb  headers_proofs.py  lz_deployments.json  lz_test.ipynb  lz_testnet.ipynb  lz_toy.ipynb  lzreadabi.py  mine_create2_address.py  mine_create3_address.py  op_test_blocks.ipynb  rlp_decode.py  rlp_encode_n_blocks.py  scan_l1_blocks.py  scan_results.json  secure_key_utils.py  utils.py  w3py_playground.ipynb
scripts/.ipynb_checkpoints/: deploy_and_configure-checkpoint.ipynb
scripts/chain-parse/: chains.json  create_chains_json.py  fe_chains.txt
scripts/chain-research/: chains.json  create_chains_json.py
scripts/deployment/: ChainlinkMetadata.py  DeploymentManager.py  LZMetadata.py  chainlink_test.ipynb  chains.json  config.ipynb  deploy.ipynb  deployment_state.json  lz_metadata.json  send_messages.ipynb  set_dvn.ipynb  setup.ipynb  test.ipynb
tests/: conftest.py
tests/fuzzing/: conftest.py  test_core_validation.py  test_security_vulnerabilities.py  test_stateful_property.py
tests/integration/: chains.json  conftest.py  test_chains.py  test_op_l1_storage.py  test_oracle.py
tests/integration/ChainlinkBlockRelay/: conftest.py  test_broadcast_latest_block.py  test_ccip_receive.py  test_fallback.py  test_initialization.py  test_internal_broadcast_block.py  test_internal_commit_block.py  test_on_report.py  test_quote_broadcast_fees.py  test_set_block_oracle.py  test_set_forwarder_address.py  test_set_peers.py  test_withdraw_eth.py
tests/integration/LZBlockRelay/: test_broadcast_latest_block.py  test_exact_payment.py  test_fallback.py  test_initialization.py  test_internal_broadcast_block.py  test_internal_commit_block.py  test_internal_get_gas_limit.py  test_internal_prepare_read_request.py  test_internal_request_block_hash.py  test_lz_receive.py  test_quote_broadcast_fees.py  test_quote_read_fee.py  test_request_block_hash.py  test_set_block_oracle.py  test_set_default_lz_refund_address.py  test_set_gas_limits.py  test_set_peers.py  test_set_read_config.py  test_withdraw_eth.py
tests/integration/LZContract/: conftest.py  test_options.py  test_quote_fee.py  test_send_message.py
tests/integration/MainnetBlockView/: test_blockhash.py
tests/integration/OPL1BlockStorage/: test_initialization.py  test_op_l1_storage.py  test_verify_block.py
tests/integration/modules/chainlink/CCIP/: conftest.py  test_CCIPCore.py  test_CCIPPeers.py  test_CCIPReceiver.py  test_CCIPSender.py  test_CCIPTransmit.py
tests/integration/modules/chainlink/CREReceiver/: conftest.py  test_CREReceiverCore.py  test_CREReceiverOnReport.py  test_CREReceiverSetters.py
tests/unitary/: conftest.py
tests/unitary/BlockHeaderRLPDecoder/: test_calculate_block_hash.py  test_decode_block_headers.py  test_rlp_utility_functions.py
tests/unitary/BlockHeadersRLPDecoder/: test_calculate_block_hash.py  test_decode_block_headers.py  test_decode_many_blocks.py
tests/unitary/BlockOracle/: test_commit_block.py  test_header.py  test_header_verifier.py  test_manage_comitters.py
tests/unitary/LZBlockRelay/: test_broadcast_targets.py
tests/unitary/OwnerProxy/: test_owner_proxy.py
web-ui/: README.md  index.html
