[project]
name            = "blockhash-oracle"
version         = "0.1.0"
description     = "ETH Mainnet Blockhash Oracle for L2s"
readme          = "README.md"
requires-python = ">=3.12"

# Requirements
dependencies = [
    "vyper==0.4.3",
    "snekmate==0.1.2rc2",
    "titanoboa==0.2.7",
    "web3>=7.6.0",
]

[tool.uv.sources]
# titanoboa = { git = "https://github.com/vyperlang/titanoboa.git", rev = "ac37ac4925eaf4284dd843ca0fa834e7c44a95a7" }

[tool.uv]
dev-dependencies = [
    "pytest-xdist>=3.6.1",
    "mamushi",
    "pre-commit==3.8.0",
    "ruff==0.6.9",
    "pytest==8.2.2",
    "plyvel-ci==1.5.1",
    "curve-dao>=1.0.0",
    "jupyter>=1.0.0",
    "python-dotenv>=1.0.1",
    "natrix==v0.1.4",
    "cryptography",
    "keyring",
    "base58"
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
markers = [
    "mainnet: mainnet (Ethereum) tests",
    "optimism: Optimism mainnet tests",
    "base: Base mainnet tests",
    "fraxtal: Fraxtal mainnet tests",
    "mantle: Mantle mainnet tests",
    "arbitrum: Arbitrum One tests",
    "taiko: Taiko mainnet tests",
    "sonic: Sonic mainnet tests",
    "polygon: Polygon mainnet tests",
    "bsc: BNB Smart Chain tests",
    "gnosis: Gnosis Chain tests",
    "xlayer: OKX X Layer tests",
    "op_chains: Tests for all OP Stack chains", # optimism, base, fraxtal, mantle
    "non_op_chains: Tests for non-OP chains",   # others
]
